--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "tailwindcss": "^3.4.9",
     "tslib": "^2.6.3",
     "typescript": "^5.5.3",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "vite-plugin-singlefile": "^2.0.2"
   },
   "dependencies": {
     "obs-websocket-js": "^5.0.5"
