--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "obd-websocket-dock",
+  "name": "frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,23 +7,34 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.node.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@eslint/js": "^9.13.0",
+    "@stylistic/eslint-plugin": "^2.9.0",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tsconfig/svelte": "^5.0.4",
+    "@types/node": "^20.17.1",
+    "@typescript-eslint/parser": "^8.16.0",
     "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.10",
-    "postcss": "^8.4.41",
-    "svelte": "^4.2.18",
-    "svelte-check": "^3.8.5",
-    "tailwindcss": "^3.4.9",
-    "tslib": "^2.6.3",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.0",
-    "vite-plugin-singlefile": "^2.0.2"
-  },
-  "dependencies": {
-    "obs-websocket-js": "^5.0.5"
+    "clsx": "^2.1.1",
+    "daisyui": "^4.12.14",
+    "eslint": "^9.13.0",
+    "eslint-plugin-svelte": "^2.46.0",
+    "globals": "^15.11.0",
+    "obs-websocket-js": "^5.0.6",
+    "postcss": "^8.4.47",
+    "svelte": "^5.15.0",
+    "svelte-check": "^4.1.1",
+    "svelte-eslint-parser": "^0.43.0",
+    "svelte-icons-pack": "^3.1.3",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "^3.4.14",
+    "tslib": "^2.8.0",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.16.0",
+    "vite": "^6.0.5",
+    "vite-plugin-singlefile": "^2.1.0",
+    "vite-plugin-static-copy": "^2.2.0"
   }
 }
